--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -22,14 +22,15 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 \\Mac\Home\ErBW_s\Projects\MM32-Wireless-Charge\2.Firmware\1.FrontCar\MM32F527X_E9P\project\mdk\mm32f527x_e9p.uvprojx
-Project File Date:  01/09/2023
+Project File Date:  01/12/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-compiling main.c...
+compiling easy_ui.c...
+compiling user_ips114.c...
 linking...
-Program Size: Code=25732 RO-data=5552 RW-data=116 ZI-data=73352  
+Program Size: Code=26372 RO-data=13684 RW-data=116 ZI-data=73352  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -43,7 +44,7 @@ Package Vendor: MindMotion
   C:/Users/baohan/AppData/Local/Arm/Packs/MindMotion/MM32F5277E_DFP/0.0.7/Device/MM32F5277E
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
