菜单主要结构搭建完成

--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  01/12/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-compiling user_ips114.c...
+compiling main.c...
+compiling isr.c...
 linking...
-Program Size: Code=26372 RO-data=13684 RW-data=116 ZI-data=73352  
+Program Size: Code=27944 RO-data=13656 RW-data=116 ZI-data=74060  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
