菜单：单、复选框，开关

--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,17 +27,10 @@ Project File Date:  01/14/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-../code/easy_ui.c(30): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
-    va_start(variableArg, func);
-                          ^
-../code/easy_ui.c(27): note: parameter of type 'EasyUIFunc_e' is declared here
-void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIFunc_e func, ...)
-                                                                                      ^
-1 warning generated.
-compiling easy_ui.c...
+compiling menu.c...
 linking...
-Program Size: Code=14600 RO-data=13500 RW-data=76 ZI-data=74312  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=14556 RO-data=13464 RW-data=76 ZI-data=74464  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
