--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,10 +27,35 @@ Project File Date:  01/14/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
+../code/easy_ui.c(30): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(27): note: parameter of type 'EasyUIItem_e' is declared here
+void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIItem_e func, ...)
+                                                                                      ^
+../code/easy_ui.c(44): warning: second argument to 'va_arg' is of promotable type 'bool'; this va_arg has undefined behavior because arguments will be promoted to 'int' [-Wvarargs]
+            item->flag = va_arg(variableArg, bool);
+                                             ^~~~
+C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdbool.h(15): note: expanded from macro 'bool'
+    #define bool _Bool
+                 ^~~~~
+C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdarg.h(43): note: expanded from macro 'va_arg'
+  #define va_arg(ap, type)    __builtin_va_arg(ap, type)
+                                                   ^~~~
+../code/easy_ui.c(87): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(84): note: parameter of type 'EasyUIPage_e' is declared here
+void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
+                                                    ^
+3 warnings generated.
+compiling easy_ui.c...
+compiling main.c...
+compiling isr.c...
 compiling menu.c...
 linking...
-Program Size: Code=14556 RO-data=13464 RW-data=76 ZI-data=74464  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=16440 RO-data=13468 RW-data=76 ZI-data=74496  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -43,7 +68,7 @@ Package Vendor: MindMotion
   C:/Users/baohan/AppData/Local/Arm/Packs/MindMotion/MM32F5277E_DFP/0.0.7/Device/MM32F5277E
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
