--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -22,28 +22,34 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 \\Mac\Home\ErBW_s\Projects\MM32-Wireless-Charge\2.Firmware\1.FrontCar\MM32F527X_E9P\project\mdk\mm32f527x_e9p.uvprojx
-Project File Date:  01/14/2023
+Project File Date:  01/18/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-../code/easy_ui.c(38): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+compiling main.c...
+compiling isr.c...
+../code/easy_ui.c(41): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
     va_start(variableArg, func);
                           ^
-../code/easy_ui.c(27): note: parameter of type 'EasyUIItem_e' is declared here
+../code/easy_ui.c(30): note: parameter of type 'EasyUIItem_e' is declared here
 void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIItem_e func, ...)
                                                                                       ^
-../code/easy_ui.c(100): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+../code/easy_ui.c(106): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
     va_start(variableArg, func);
                           ^
-../code/easy_ui.c(95): note: parameter of type 'EasyUIPage_e' is declared here
+../code/easy_ui.c(101): note: parameter of type 'EasyUIPage_e' is declared here
 void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
                                                     ^
-2 warnings generated.
+../code/easy_ui.c(844): warning: 4 enumeration values not handled in switch: 'ITEM_PAGE_DESCRIPTION', 'ITEM_JUMP_PAGE', 'ITEM_CALL_FUNCTION'... [-Wswitch]
+            switch (itemTmp->funcType)
+                    ^~~~~~~~~~~~~~~~~
+3 warnings generated.
 compiling easy_ui.c...
+compiling menu.c...
 linking...
-Program Size: Code=18660 RO-data=13456 RW-data=96 ZI-data=74372  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=20052 RO-data=13544 RW-data=132 ZI-data=75748  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
