增加8x16字库支持

--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -26,7 +26,90 @@ Project File Date:  01/18/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'mm32f527x_e9p_project'
+Rebuild target 'mm32f527x_e9p_project'
+compiling zf_common_clock.c...
+compiling main.c...
+compiling isr.c...
+compiling zf_common_debug.c...
+compiling zf_common_fifo.c...
+compiling zf_common_font.c...
+compiling zf_common_interrupt.c...
+compiling zf_common_function.c...
+compiling zf_driver_adc.c...
+compiling zf_driver_dac.c...
+compiling zf_driver_delay.c...
+compiling zf_driver_dma.c...
+compiling zf_driver_exti.c...
+compiling zf_driver_encoder.c...
+compiling zf_driver_flash.c...
+compiling zf_driver_fsmc.c...
+compiling zf_driver_gpio.c...
+compiling zf_driver_pit.c...
+compiling zf_driver_pwm.c...
+compiling zf_driver_iic.c...
+compiling zf_driver_soft_iic.c...
+compiling zf_driver_soft_spi.c...
+compiling zf_driver_spi.c...
+compiling zf_driver_timer.c...
+compiling zf_driver_uart.c...
+compiling zf_device_absolute_encoder.c...
+compiling zf_device_bluetooth_ch9141.c...
+compiling zf_device_camera.c...
+compiling zf_device_gt911.c...
+compiling zf_device_gps_tau1201.c...
+compiling zf_device_icm20602.c...
+compiling zf_device_imu660ra.c...
+compiling zf_device_imu963ra.c...
+compiling zf_device_ips114.c...
+compiling zf_device_is66wv51216.c...
+compiling zf_device_ips350.c...
+compiling zf_device_ips200.c...
+compiling zf_device_k24c02.c...
+compiling zf_device_key.c...
+compiling zf_device_mpu6050.c...
+compiling zf_device_mt9v03x.c...
+compiling zf_device_ov7725.c...
+compiling zf_device_oled.c...
+compiling zf_device_sdcard_spi.c...
+compiling zf_device_scc8660.c...
+compiling zf_device_type.c...
+compiling zf_device_virtual_oscilloscope.c...
+compiling zf_device_tft180.c...
+compiling zf_device_wireless_uart.c...
+assembling startup_mm32f5277e.S...
+compiling zf_device_wifi_uart.c...
+compiling system_mm32f5277e.c...
+compiling hal_comp.c...
+compiling hal_adc.c...
+compiling hal_crc.c...
+compiling hal_exti.c...
+compiling hal_dma.c...
+compiling hal_dac.c...
+compiling hal_fsmc.c...
+compiling hal_gpio.c...
+compiling hal_flexcan.c...
+compiling hal_i2s.c...
+compiling hal_i2c.c...
+compiling hal_iwdg.c...
+compiling hal_lptim.c...
+compiling hal_lpuart.c...
+compiling hal_mds.c...
+compiling hal_power.c...
+compiling hal_pwr.c...
+compiling hal_qspi.c...
+compiling hal_rcc.c...
+compiling hal_rtc.c...
+compiling hal_spi.c...
+compiling hal_syscfg.c...
+compiling hal_uart.c...
+compiling hal_tim.c...
+compiling hal_usb.c...
+compiling hal_wwdg.c...
+compiling easy_key.c...
+compiling pid.c...
+compiling menu.c...
+compiling user_ips114.c...
+compiling profile_photo_erbws.c...
 ../code/easy_ui.c(41): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
     va_start(variableArg, func);
                           ^
@@ -41,6 +124,7 @@ void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
                                                     ^
 2 warnings generated.
 compiling easy_ui.c...
+compiling user_flash.c...
 linking...
 Program Size: Code=20448 RO-data=13772 RW-data=140 ZI-data=76764  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 2 Warning(s).
@@ -56,7 +140,7 @@ Package Vendor: MindMotion
   C:/Users/baohan/AppData/Local/Arm/Packs/MindMotion/MM32F5277E_DFP/0.0.7/Device/MM32F5277E
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
