--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 \\Mac\Home\ErBW_s\Projects\MM32-Wireless-Charge\2.Firmware\1.FrontCar\MM32F527X_E9P\project\mdk\mm32f527x_e9p.uvprojx
-Project File Date:  01/25/2023
+Project File Date:  01/26/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-compiling menu.c...
+compiling easy_ui_user_app.c...
 linking...
-Program Size: Code=20256 RO-data=13572 RW-data=296 ZI-data=76560  
+Program Size: Code=20380 RO-data=13572 RW-data=296 ZI-data=76560  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -43,7 +43,7 @@ Package Vendor: MindMotion
   C:/Users/baohan/AppData/Local/Arm/Packs/MindMotion/MM32F5277E_DFP/0.0.7/Device/MM32F5277E
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
