--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -22,15 +22,28 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 \\Mac\Home\ErBW_s\Projects\MM32-Wireless-Charge\2.Firmware\1.FrontCar\MM32F527X_E9P\project\mdk\mm32f527x_e9p.uvprojx
-Project File Date:  01/26/2023
+Project File Date:  01/27/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-compiling easy_ui_user_app.c...
+../code/easy_ui.c(43): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(32): note: parameter of type 'EasyUIItem_e' is declared here
+void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIItem_e func, ...)
+                                                                                      ^
+../code/easy_ui.c(108): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(103): note: parameter of type 'EasyUIPage_e' is declared here
+void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
+                                                    ^
+2 warnings generated.
+compiling easy_ui.c...
 linking...
-Program Size: Code=20380 RO-data=13572 RW-data=296 ZI-data=76560  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=21584 RO-data=13800 RW-data=320 ZI-data=100328  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
