--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,23 +27,10 @@ Project File Date:  01/27/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-../code/easy_ui.c(43): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
-    va_start(variableArg, func);
-                          ^
-../code/easy_ui.c(32): note: parameter of type 'EasyUIItem_e' is declared here
-void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIItem_e func, ...)
-                                                                                      ^
-../code/easy_ui.c(109): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
-    va_start(variableArg, func);
-                          ^
-../code/easy_ui.c(104): note: parameter of type 'EasyUIPage_e' is declared here
-void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
-                                                    ^
-2 warnings generated.
-compiling easy_ui.c...
+compiling user_ips114.c...
 linking...
-Program Size: Code=22264 RO-data=13800 RW-data=320 ZI-data=100336  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=25236 RO-data=13800 RW-data=328 ZI-data=100336  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -56,7 +43,7 @@ Package Vendor: MindMotion
   C:/Users/baohan/AppData/Local/Arm/Packs/MindMotion/MM32F5277E_DFP/0.0.7/Device/MM32F5277E
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
