--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  01/27/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
-compiling user_ips114.c...
+compiling easy_ui_user_app.c...
 linking...
-Program Size: Code=25236 RO-data=13800 RW-data=328 ZI-data=100336  
+Program Size: Code=25316 RO-data=13800 RW-data=328 ZI-data=100336  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
