--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -27,10 +27,35 @@ Project File Date:  01/27/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'mm32f527x_e9p_project'
+compiling main.c...
+compiling isr.c...
+../code/easy_ui.c(44): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(33): note: parameter of type 'EasyUIItem_e' is declared here
+void EasyUIAddItem(EasyUIPage_t *page, EasyUIItem_t *item, char *_title, EasyUIItem_e func, ...)
+                                                                                      ^
+../code/easy_ui.c(110): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
+    va_start(variableArg, func);
+                          ^
+../code/easy_ui.c(105): note: parameter of type 'EasyUIPage_e' is declared here
+void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
+                                                    ^
+2 warnings generated.
+compiling easy_ui.c...
+compiling pid.c...
+../code/ctrl.c(69): warning: non-void function does not return a value [-Wreturn-type]
+}
+^
+1 warning generated.
+compiling ctrl.c...
+compiling buzzer.c...
+compiling user_ips114.c...
+compiling image_process.c...
 compiling easy_ui_user_app.c...
 linking...
-Program Size: Code=25316 RO-data=13800 RW-data=328 ZI-data=100336  
-".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=25340 RO-data=13804 RW-data=328 ZI-data=100336  
+".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
