--- a/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
+++ b/2.Firmware/1.FrontCar/MM32F527X_E9P/project/mdk/Objects/mm32f527x_e9p.build_log.htm
@@ -44,15 +44,15 @@ void EasyUIAddPage(EasyUIPage_t *page, EasyUIPage_e func, ...)
 2 warnings generated.
 compiling easy_ui.c...
 compiling pid.c...
+compiling user_flash.c...
 ../code/ctrl.c(69): warning: non-void function does not return a value [-Wreturn-type]
 }
 ^
 1 warning generated.
 compiling ctrl.c...
 compiling buzzer.c...
-compiling user_ips114.c...
-compiling image_process.c...
 compiling easy_ui_user_app.c...
+compiling image_process.c...
 linking...
 Program Size: Code=25340 RO-data=13804 RW-data=328 ZI-data=100336  
 ".\Objects\mm32f527x_e9p.axf" - 0 Error(s), 3 Warning(s).
